--- a/src/Style.css
+++ b/src/Style.css
@@ -1,3 +1,10 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  max-width: 500px;
+}
+
 .App {
   display: grid;
   place-items: center;
