--- a/src/Card.css
+++ b/src/Card.css
@@ -1,7 +1,7 @@
 .Card {
   display: grid;
   gap: 10px;
-  background: rgba(185, 177, 150, 0.979);
+  background: rgba(238, 215, 138, 0.979);
   padding: 10px 15px;
   border-radius: 10px;
   position: relative;
@@ -12,14 +12,14 @@
   position: absolute;
   top: -10px;
   right: 10px;
-  background: #d3d3d3;
+  background: rgb(216, 226, 226);
   height: 40px;
   width: 30px;
   border: none;
 }
 
 .Selected {
-  background: #be851c;
+  background: #eba31d;
 }
 
 .Question {
@@ -35,9 +35,24 @@
 .Answer {
   margin: 0;
   text-align: center;
-  background: white;
+  background: rgb(216, 226, 226);
+  border-radius: 10px;
 }
 
 .hidden {
   display: none;
+}
+
+.Tags {
+  padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  gap: 10px;
+}
+
+.Tag {
+  background: rgb(149, 206, 233);
+  border-radius: 5px;
 }
