--- a/src/Card.css
+++ b/src/Card.css
@@ -1,7 +1,7 @@
 .Card {
   display: grid;
   gap: 10px;
-  background: rgba(238, 215, 138, 0.979);
+  background: #ceba7d;
   padding: 10px 15px;
   border-radius: 10px;
   position: relative;
@@ -53,6 +53,6 @@
 }
 
 .Tag {
-  background: rgb(149, 206, 233);
+  background: rgb(132, 173, 192);
   border-radius: 5px;
 }
