--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,20 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  max-width: 500px;
+  font-family: sans-serif;
 }
 
 .App {
   display: grid;
+  grid-template-rows: 48px auto 60px;
+  grid-gap: 20px;
+  padding: 0;
+}
+
+.divCards {
+  display: grid;
   place-items: center;
   grid-gap: 20px;
+  overflow-y: scroll;
   padding: 10px;
-  margin-bottom: 5px;
 }
