--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,8 @@
 .Header {
   line-height: 1.3;
   margin: 0;
+  height: 48px;
+  background: #333;
+  color: rgb(216, 226, 226);
+  text-align: center;
 }
