--- a/src/Pagination.css
+++ b/src/Pagination.css
@@ -1,22 +1,11 @@
 .Pagination {
-  width: 300px;
   display: flex;
-  place-items: center;
-  gap: 30px;
   justify-content: space-evenly;
-}
-
-.ButtonPagination {
-  padding: 12px;
-  border: red solid 1px;
-  border: none;
-  border-radius: 4px;
-}
-
-.ButtonPagination.activePagination {
-  background: hotpink;
+  align-items: center;
+  width: 300px;
 }
 
 .Span {
-  width: 35px;
+  width: 50px;
+  text-align: center;
 }
