--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
   line-height: 1.3;
   margin: 0;
   height: 48px;
-  background: #333;
+  background: #eba31d;
   color: rgb(216, 226, 226);
   text-align: center;
 }
