--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  font-family: sans-serif;
-}
-
 .App {
   display: grid;
   grid-template-rows: 48px auto 60px;
@@ -12,10 +5,15 @@ body {
   padding: 0;
 }
 
-.divCards {
+.CardsContainer {
   display: grid;
   place-items: center;
   grid-gap: 20px;
   overflow-y: scroll;
   padding: 10px;
+}
+
+.ButtonsContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
