--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,8 @@
   padding: 20px;
 }
 
-.CardsContainer {
-  display: grid;
-  place-items: center;
-  grid-gap: 20px;
-  overflow-y: scroll;
-  padding: 10px;
-}
-
-.ButtonsContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+.Box {
+  background: hotpink;
+  width: 50px;
+  height: 50px;
 }
